--- a/testcandidates/hasura/provision/Dockerfile
+++ b/testcandidates/hasura/provision/Dockerfile
@@ -1,7 +1,10 @@
-FROM hasura/graphql-engine:v1.0.0-alpha0
+FROM hasura/graphql-engine:v1.0.0-alpha08
+
+ARG DATABASE_URL
+ENV DATABASE_URL=$DATABASE_URL
 
 CMD graphql-engine \
-    --database-url $(cat ~/postgres_credentials) \
+    --database-url $DATABASE_URL \
     serve \
     --server-port 8080 \
     --cors-domain "http://localhost:9695"
