--- a/testcandidates/prisma/provision/docker-compose-pg.yml
+++ b/testcandidates/prisma/provision/docker-compose-pg.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   prisma:
-    image: prismagraphql/prisma:1.8.3
+    image: prismagraphql/prisma:1.12
     ports:
     - "4466:4466"
     environment:
@@ -14,15 +14,6 @@ services:
             connector: postgres
             host: postgres
             port: 5432
-            user: prisma
-            password: prisma
+            user: postgres
+            password: unsecured
             migrations: true
-  postgres:
-    image: postgres
-    environment:
-      POSTGRES_USER: prisma
-      POSTGRES_PASSWORD: prisma
-    volumes:
-      - postgres:/var/lib/postgresql/data
-volumes:
-  postgres:
