--- a/testcandidates/bench.yaml
+++ b/testcandidates/bench.yaml
@@ -27,47 +27,48 @@
     name: 8cpu
     url4: http://ec2-52-39-1-150.us-west-2.compute.amazonaws.com:8080/v1alpha1/graphql
     queries_file: queries.graphql
-
-
-  rps: &rps_50_5000
-  - 50
-  - 100
-  - 200
-  - 400
-  - 600
-  - 800
-  - 1000
-  - 1250
-  - 1500
-  - 1750
-  - 2000
-  - 2500
-  - 3000
-  - 3500
-  - 4000
-  - 5000
-
-- <<: *default_bench
-  name: Nested 20
-  query: albums_tracks_genre_all
+  
   rps:
-    - 5
-    - 10
-    - 20
-    - 30
-    - 40
-    - 50
-    - 75
-    - 100
+    500
 
-- <<: *default_bench
-  name: Nested with where 20
-  query: albums_tracks_genre_some
+# - <<: *default_bench
+  # name: Nested 20
+  # query: albums_tracks_genre_all
+  # rps:
+    # - 5
+    # - 10
+    # - 20
+    # - 30
+    # - 40
+    # - 50
+    # - 75
+    # - 100
+#
+# - <<: *default_bench
+  # name: Nested with where 20
+  # query: albums_tracks_genre_some
 
 # - <<: *default_bench
   # name: Simple Select 40
   # query: artistByArtistId
   # open_connections: 40
+  # rps: &rps_50_5000
+  # - 50
+  # - 100
+  # - 200
+  # - 400
+  # - 600
+  # - 800
+  # - 1000
+  # - 1250
+  # - 1500
+  # - 1750
+  # - 2000
+  # - 2500
+  # - 3000
+  # - 3500
+  # - 4000
+  # - 5000
 #
 # - <<: *default_bench
   # name: Nested 40
