--- a/testcandidates/prisma/provision/docker-compose-pg.yml
+++ b/testcandidates/prisma/provision/docker-compose-pg.yml
@@ -1,12 +1,13 @@
 version: '3'
 services:
   prisma:
-    image: prismagraphql/prisma:1.12
+    image: prismagraphql/prisma:1.14.2
     ports:
     - "4466:4466"
     environment:
       PRISMA_CONFIG: |
         port: 4466
+        enableManagementApi: false
         # uncomment the next line and provide the env var PRISMA_MANAGEMENT_API_SECRET=my-secret to activate cluster security
         # managementApiSecret: my-secret
         databases:
